# finch-buck2

./: .buck2-cpp-cpm.toml  .buckconfig  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  BUCK  CMakeLists.txt  CONTRIBUTING.md  README.md  buck2_migration_summary.md  build_summary.md  simple_test.cpp  test_migration.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  migration_failure.md
.github/workflows/: ci.yml  release.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake  FinchConfig.cmake.in  Sanitizers.cmake
docs/: .gitkeep  error_handling.md  logging_framework.md
examples/: .gitkeep  CMakeLists.txt  cmake_evaluator_example.cpp  error_handling_example.cpp  logging_example.cpp  parser_example.cpp  simple_logging_example.cpp
include/finch/: .gitkeep  version.h.in
include/finch/analyzer/: cmake_evaluator.hpp  evaluation_context.hpp  project_analysis.hpp
include/finch/cli/: application.hpp  migration_pipeline.hpp  progress_reporter.hpp
include/finch/core/: error.hpp  error_logging.hpp  error_reporter.hpp  logging.hpp  logging_helpers.hpp  module_logger.hpp  otel_integration.hpp  result.hpp  try.hpp
include/finch/generator/: generator.hpp  rule_templates.hpp  starlark_writer.hpp  target_mapper.hpp
include/finch/parser/: cpm_parser.hpp  parser.hpp
include/finch/parser/ast/: README.md  builder.hpp  commands.hpp  control_flow.hpp  cpm_nodes.hpp  expressions.hpp  literals.hpp  node.hpp  structure.hpp  visitor.hpp
include/finch/parser/lexer/: interpolation.hpp  lexer.hpp  source_buffer.hpp  token.hpp
scripts/: setup-dev.sh
src/: .gitkeep  CMakeLists.txt  dummy.cpp
src/analyzer/: cmake_evaluator.cpp  evaluation_context.cpp
src/cli/: application.cpp  migration_pipeline.cpp  progress_reporter.cpp
src/core/: logging.cpp  logging_helpers.cpp  otel_integration.cpp
src/generator/: generator.cpp  rule_templates.cpp  starlark_writer.cpp  target_mapper.cpp
src/parser/: cpm_parser.cpp  parser.cpp  parser_arguments.cpp  parser_control_flow.cpp  parser_errors.cpp  parser_tokens.cpp
src/parser/ast/: clone_impl.cpp  visitor_impl.cpp
src/parser/lexer/: lexer.cpp  source_buffer.cpp  token.cpp
test/: .gitkeep  BUCK  CMakeLists.txt  dummy_test.cpp
test/analyzer/: cmake_evaluator_test.cpp
test/core/: error_handling_test.cpp  logging_test.cpp
test/integration/: README.md  otel_filesystem_test.cpp  simple_migration_test.cpp
test/parser/: cpm_parser_test.cpp  lexer_test.cpp  parser_test.cpp
test/projects/simple-library/: BUCK.expected  CMakeLists.txt  metadata.yaml
test/projects/simple-library/include/simple/: calculator.hpp
test/projects/simple-library/src/: calculator.cpp
toolchains/: BUCK
tools/: .gitkeep  CMakeLists.txt  main.cpp
